# liteboard

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
daemon/: Dockerfile  dockerapi.py  images.py  liteboard_daemon.py  metrics.py  netinspect.py  protocol.py  requirements.txt  selfupdate.py
scripts/: keygen.py
server/: Dockerfile  pyproject.toml
server/liteboard/: __init__.py  config.py  main.py  setup.py  state.py
server/liteboard/api/: routes.py
server/liteboard/auth/: oidc.py
server/liteboard/crypto/: signer.py
server/liteboard/daemon_dist/: bundle.py
server/liteboard/dockersvc/: health.py  redeploys.py  swarm.py  updates.py
server/liteboard/nodes/: collector.py  networks.py
server/liteboard/registry/: manifest.py
server/tests/: test_config.py  test_daemon_idle.py  test_daemon_images.py  test_health.py  test_manifest.py  test_networks.py  test_protocol.py  test_service_logs.py  test_setup.py  test_swarm_pubkey.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/public/: site.webmanifest
web/src/: App.vue  router.js  style.css
web/src/components/: AddNodeModal.vue  Gauge.vue  HealthBadge.vue  Icon.vue  LogsModal.vue  MeterBar.vue  NodeCard.vue  PageHeader.vue  RegistryLoginModal.vue  ServiceDetailModal.vue  ServiceRow.vue  StatCard.vue
web/src/lib/: ansi.js  api.js  format.js  store.js
web/src/views/: Login.vue  Networks.vue  Nodes.vue  Overview.vue  Setup.vue  Updates.vue
