[project]
name = "liteboard"
version = "1.0.0"
description = "Docker Swarm health & operations dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "docker>=7.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["liteboard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
